--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,13 @@
 #headshots {
   background: url("https://static1.squarespace.com/static/5bd987149d5abbd8c3790ba8/t/5beaaec9cd8366439d555fc7/1542106828036/hbg.jpg") top center;
   background-size: cover; }
+
+.Main-content {
+  padding: 120px 50px; }
+
+#yui_3_17_2_1_1542110866668_67 .col:last-of-type {
+  background: #ffffff;
+  box-shadow: 0 30px 60px -30px; }
+  #yui_3_17_2_1_1542110866668_67 .col:last-of-type > div {
+    padding: 40px;
+    border: 2px solid #f0f1f5; }
