--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,9 @@
 .Main-content {
   padding: 120px 50px; }
 
-#yui_3_17_2_1_1542110866668_67 .col:last-of-type {
+#page-5beabc0d8a922d06f771ef29 .sqs-col-7 + .sqs-col-5 {
   background: #ffffff;
   box-shadow: 0 30px 60px -30px; }
-  #yui_3_17_2_1_1542110866668_67 .col:last-of-type > div {
+  #page-5beabc0d8a922d06f771ef29 .sqs-col-7 + .sqs-col-5 > div {
     padding: 40px;
     border: 2px solid #f0f1f5; }
