--- a/styles.scss
+++ b/styles.scss
@@ -15,6 +15,10 @@
   }
 }
 
+.Index-page {
+  background-color: #f9f7f1;
+}
+
 #headshots {
   background: url("https://static1.squarespace.com/static/5bd987149d5abbd8c3790ba8/t/5beaaec9cd8366439d555fc7/1542106828036/hbg.jpg")
     top center;
