--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,9 @@
     #page-5bd99396aa4a9938caf017be #block-a4c0e534a4b6df92535e h2 {
       font-size: 40px; }
 
+.Index-page {
+  background-color: #f9f7f1; }
+
 #headshots {
   background: url("https://static1.squarespace.com/static/5bd987149d5abbd8c3790ba8/t/5beaaec9cd8366439d555fc7/1542106828036/hbg.jpg") top center;
   background-size: cover; }
